[gd_scene load_steps=24 format=3 uid="uid://crrgrlu3476er"]

[ext_resource type="Texture2D" uid="uid://ckmnuawt57mis" path="res://Resources/Sprites/Bat.png" id="1_6hswj"]
[ext_resource type="Script" path="res://Scripts/Interaction/bat.gd" id="1_tfnox"]
[ext_resource type="Script" path="res://Scripts/Interaction/Hitbox.gd" id="3_adigm"]
[ext_resource type="Script" path="res://Scripts/Interaction/Hurtbox.gd" id="4_rpgfb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gegnq"]
atlas = ExtResource("1_6hswj")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwrq8"]
atlas = ExtResource("1_6hswj")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivcs7"]
atlas = ExtResource("1_6hswj")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysx1o"]
atlas = ExtResource("1_6hswj")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7stci"]
atlas = ExtResource("1_6hswj")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t27np"]
atlas = ExtResource("1_6hswj")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rux0t"]
atlas = ExtResource("1_6hswj")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckb81"]
atlas = ExtResource("1_6hswj")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7oglv"]
atlas = ExtResource("1_6hswj")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fejj5"]
atlas = ExtResource("1_6hswj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_chidf"]
atlas = ExtResource("1_6hswj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwney"]
atlas = ExtResource("1_6hswj")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8y2n"]
atlas = ExtResource("1_6hswj")
region = Rect2(32, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_w3el0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gegnq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwrq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivcs7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysx1o")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7stci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t27np")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rux0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckb81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7oglv")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"death2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fejj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chidf")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwney")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8y2n")
}],
"loop": true,
"name": &"default2",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nqje2"]
size = Vector2(28, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_scp1p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0xidp"]
radius = 170.074

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jrah8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bmgnk"]
size = Vector2(28, 28)

[node name="Bat" type="CharacterBody2D"]
scale = Vector2(4, 4)
collision_layer = 0
collision_mask = 8
script = ExtResource("1_tfnox")

[node name="Bat" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_w3el0")

[node name="Hitbox" type="Area2D" parent="."]
visible = false
script = ExtResource("3_adigm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_nqje2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_scp1p")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_0xidp")

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
script = ExtResource("4_rpgfb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_jrah8")

[node name="Timer" type="Timer" parent="Hurtbox"]

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.2

[node name="Area2D2" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_bmgnk")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
